--- a/Exemplo_simples_NMF.ipynb
+++ b/Exemplo_simples_NMF.ipynb
@@ -786,6 +786,251 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Vou repetir o mesmo procedimento com apenas 2 tópicos para vermos a diferença"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 313,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Valores usados no modelo NMF\n",
+    "num_topicos = 2\n",
+    "n_top_words = 5\n",
+    "\n",
+    "def print_top_words(model, feature_names, n_top_words):\n",
+    "    for topic_idx, topic in enumerate(model.components_):\n",
+    "        print(\"Topico #%d:\" % topic_idx)\n",
+    "        print(\" \".join([feature_names[i]\n",
+    "                        for i in topic.argsort()[:-n_top_words - 1:-1]]))\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 314,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# tfidf para NMF.\n",
+    "tfidf_vectorizer = TfidfVectorizer(\n",
+    "                                   vocabulary=dicionario_formato_nmf\n",
+    "                                   )\n",
+    "tfidf = tfidf_vectorizer.fit_transform(df_textos.texto_inicial)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 315,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Topicos no NMF:\n",
+      "Topico #0:\n",
+      "hospital saude orcamento medicos precario\n",
+      "Topico #1:\n",
+      "orcamento loa aumento gastos lrf\n",
+      "()\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Modelo NMF \n",
+    "nmf = NMF(n_components=num_topicos, random_state=1,\n",
+    "          alpha=.1, l1_ratio=.5, init='nndsvd').fit(tfidf)\n",
+    "\n",
+    "print(\"\\nTopicos no NMF:\")\n",
+    "tfidf_feature_names = tfidf_vectorizer.get_feature_names()\n",
+    "print_top_words(nmf, tfidf_feature_names, n_top_words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 316,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.82438132766321937, 0.0]\n",
+      "[0.069258233202598676, 0.77235075258987851]\n",
+      "[0.82642929606038251, 0.0029679543014338896]\n",
+      "[0.0, 0.83019525934942828]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ocorrencia_topicos =nmf.transform(tfidf)\n",
+    "\n",
+    "for documento in ocorrencia_topicos:\n",
+    "    print list(documento)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 317,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.45549694430764848, 0.65714501300266814, 0.33144270361781314, 0.43576737972648583, 0.0, 0.0, 0.0, 0.22048729305749742, 0.0, 0.0]\n",
+      "[0.0, 0.0, 0.0, 0.53790117963220629, 0.45302243700309852, 0.21929491319088967, 0.21929491319088967, 0.0, 0.32792067036698264, 0.32792067036698264]\n",
+      "0 saude\n",
+      "1 hospital\n",
+      "2 medicos\n",
+      "3 orcamento\n",
+      "4 loa\n",
+      "5 qualidade\n",
+      "6 lrf\n",
+      "7 precario\n",
+      "8 gastos\n",
+      "9 aumento\n"
+     ]
+    }
+   ],
+   "source": [
+    "for topico in nmf.components_:\n",
+    "    print list(topico)\n",
+    "for k, v in sorted(dicionario.iteritems()):\n",
+    "    print k, v"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 318,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "lista_topico_principal_por_discurso = []\n",
+    "for discurso in ocorrencia_topicos:\n",
+    "    topico, relevancia =  max(enumerate(discurso), key=lambda x: x[1])\n",
+    "    lista_topico_principal_por_discurso.append(topico)\n",
+    "df_textos['topico_principal'] = pd.Series(lista_topico_principal_por_discurso, index=df_textos.index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 319,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>texto_inicial</th>\n",
+       "      <th>tokens</th>\n",
+       "      <th>topico_principal</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>orcamento saude hospital medicos</td>\n",
+       "      <td>[orcamento, saude, hospital, medicos]</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>orcamento loa responsabilidade qualidade orcam...</td>\n",
+       "      <td>[orcamento, loa, qualidade, orcamento, lrf, or...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>orcamento hospital hospital saude precario orc...</td>\n",
+       "      <td>[orcamento, hospital, hospital, saude, precari...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>orcamento aumento gastos loa</td>\n",
+       "      <td>[orcamento, aumento, gastos, loa]</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                       texto_inicial  \\\n",
+       "0                   orcamento saude hospital medicos   \n",
+       "1  orcamento loa responsabilidade qualidade orcam...   \n",
+       "2  orcamento hospital hospital saude precario orc...   \n",
+       "3                       orcamento aumento gastos loa   \n",
+       "\n",
+       "                                              tokens  topico_principal  \n",
+       "0              [orcamento, saude, hospital, medicos]                 0  \n",
+       "1  [orcamento, loa, qualidade, orcamento, lrf, or...                 1  \n",
+       "2  [orcamento, hospital, hospital, saude, precari...                 0  \n",
+       "3                  [orcamento, aumento, gastos, loa]                 1  "
+      ]
+     },
+     "execution_count": 319,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_textos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Vejam que a divisão agora foi diferente, mas ainda assim podemos reconhecer dois tópicos claros, embora o peso das palavras para o tópico tenha sido alterado.\n",
+    "#### Apesar de estarmos vendo apenas um exemplo simples, com poucas palavras e poucos textos, vejo importancia em tentar determinar a quantidade de tópicos para evitar esse mascaramento de termos relevantes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
